testdata/baselines/reference/submodule/conformance/jsDeclarationsThisTypes.errors.txt
index.js(7,35): error TS8010: Type annotations can only be used in TypeScript files.


==== index.js (1 errors) ====
    export class A {
        /** @returns {this} */
        method() {
            return this;
        }
    }
    export default class Base extends A {
                                      ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        // This method is required to reproduce #35932
        verify() { }
    }